crates/ruff_python_parser/src/lexer/snapshots/ruff_python_parser__lexer__tests__operators.snap
---
source: crates/ruff_python_parser/src/lexer/mod.rs
expression: tokens
---
[
    Token {
        kind: DoubleSlash,
        length: 2,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: DoubleSlash,
        length: 2,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: DoubleSlashEqual,
        length: 3,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: Slash,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: Whitespace,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: Slash,
        length: 1,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: EndOfFile,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
]
