crates/ruff_python_parser/src/lexer/snapshots/ruff_python_parser__lexer__tests__string_continuation_windows.snap
---
source: crates/ruff_python_parser/src/lexer/mod.rs
expression: tokens
---
[
    Token {
        kind: String,
        length: 12,
        value: Some(
            "\"abc\\\r\\\ndef\"",
        ),
        flags: TokenFlags(
            0x0,
        ),
    },
    Token {
        kind: EndOfFile,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
]
