crates/ruff_python_parser/src/lexer/snapshots/ruff_python_parser__lexer__tests__triple_quoted_unix.snap
---
source: crates/ruff_python_parser/src/lexer/mod.rs
expression: tokens
---
[
    Token {
        kind: String,
        length: 21,
        value: Some(
            "\"\"\"\n test string\n \"\"\"",
        ),
        flags: TokenFlags(
            TripleQuoted,
        ),
    },
    Token {
        kind: EndOfFile,
        length: 0,
        value: None,
        flags: TokenFlags(
            0x0,
        ),
    },
]
